--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@ code {
   box-sizing: border-box;
 }
 
+.is-hidden {
+  visibility: hidden ! important;
+  /*  ! important => CSSのルールを無視して優先してスタイルを適用する */
+}
+
 .App {
   /* 横幅を指定　a.(マスの幅)＊個数＋(ボーダーの幅)＊本数 */
   max-width: calc(9px * 35 + 1px * 2); 
@@ -40,10 +45,27 @@ code {
   background: #0f1d1d;
 }
 
+.title-container {
+  border-radius: 4px 4px 0px 0px;
+  box-shadow:0px 4px 1px 1px #97A5A5, 0px 6px 1px 1px #3C4A4A, 0px 0px 1px 1px #3C4A4A;
+}
+
+.title {
+  margin: 0;
+  padding:8px;
+  font-size:1.1rem;
+}
+
 .field {
   /* 折り返す　b. */
   flex-wrap: wrap;
   display: flex;
+  margin-top:2px;
+  color: white;
+  background: #0f1d1d;
+  border-radius: 0 0 4px 4px;
+  border: 1px solid #ffffff30;
+  box-shadow:0px 4px 1px 1px #0C1818, 0px 6px 1px 1px #060f0d;
 }
 
 .snake {
@@ -73,7 +95,7 @@ code {
 
 .navigation-item-number-container {
   display: flex;
-  padding: 8px;
+  padding: 0 8px;
   align-items: center;
   margin-left: 8px;
 }
@@ -85,4 +107,149 @@ code {
   background: #0f1d1d;
   height: 48px;
   width: 24px;
+}
+
+.difficulty-number {
+  margin-right: 8px;
+}
+/* どこのこと指してる？ */
+
+.difficulty-button {
+  cursor: pointer;
+  width: 8px;
+  height: 8px;
+  border: 8px solid #0f1d1d;
+  margin:8px;
+}
+
+.difficulty-button-container {
+  background: #0f1d1d;
+}
+
+.difficulty-up {
+  margin-top: 4px;
+  border-bottom: 8px solid #f0f0f050;
+  transition: all ease .5s;
+  /* all: 変化する全てのプロパティへの適用 */
+  /* ease: 開始時間と終了時間じにはゆっくり変化(初期値) */
+}
+
+.difficulty-up:hover {
+  transform: scale(1.1);
+  border-bottom: 8px solid white;
+  /* scale： 画像や要素を拡大・縮小*/
+  /* 恐らくこの拡大をすることにより、hoverしたときに線が入っている？ */
+}
+
+.difficulty-up:active {
+  transform: scale(.8);
+  opacity: .8;
+}
+
+.difficulty-down {
+  margin-bottom: 4px;
+  border-top: 8px solid #f0f0f050;
+  transition: all ease .5s;
+}
+
+.difficulty-down:hover {
+  transform: scale(1.1);
+  border-top:8px solid white;
+}
+
+.difficulty-down:active {
+  transform: scale(.8);
+  opacity: .8;
+}
+
+/* ステータスボタン */
+.btn{
+  border:0;
+  cursor: pointer;
+  color: white;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: bold;
+  padding:8px 16px;
+  font-size:1rem;
+  text-transform: uppercase;
+  transition:all ease .2s;
+}
+
+.btn-init,
+.btn-suspended {
+  box-shadow: 0px 4px 1px 1px #199A4B, 0px 6px 1px 1px #0b5420;
+  background: #23CE6B;
+}
+
+.btn-playing {
+  box-shadow: 0px 4px 1px 1px #D4A752, 0px 6px 1px 1px #956933;
+  background: #FFD166;
+}
+
+.btn-gameover {
+  box-shadow: 0px 4px 1px 1px #CE3959, 0px 6px 1px 1px #8B1C2C;
+  background: #EF476F;
+}
+
+.btn:focus {
+  outline:0;
+}
+
+.btn:active {
+  box-shadow: 0px 0px 0px 0px;
+  transform: translateY(6px);
+}
+
+.btn-init:active,
+.btn-suspended:active {
+  background: #20BD60;
+}
+
+.btn-playing:active {
+  background: #EABC5C;
+}
+
+.btn-gameover:active {
+  background: #de4064;
+}
+
+
+/* 操作パネルのスタイリング */
+.manipulation-panel {
+  margin-top: 2px;
+  display: flex;
+  justify-content: center;
+}
+
+.manipulation-btn {
+  min-width: 106px;
+  margin: 4px 2px;
+  background: #52B4E8;
+  box-shadow: 0px 4px 1px 1px #4293C4, 0px 6px 1px 1px #21507B;
+}
+
+.btn-move:active {
+  background: #4293C4;
+}
+
+.btn-left,
+.btn-right
+{
+  min-width: 106px;
+  width: 106px;
+}
+.btn-left {
+  margin-right: 0;
+}
+
+.btn-right {
+  margin-right: 0;
+}
+
+.btn-up,
+.btn-down
+{
+  margin-left: 0px;
+  margin-right: 0px;
 }
